<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/activity_grid__view" android:background="@mipmap/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:background="#80000000" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <GridView android:id="@+id/gridView1" android:layout_width="match_parent" android:layout_height="match_parent" android:horizontalSpacing="2dp" android:layout_below="@+id/Title" android:layout_centerHorizontal="true"/>
    <android.support.p000v4.view.ViewPager android:id="@+id/photo_vp" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY"/>
    <VideoView android:id="@+id/Brow_videoView2" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/Title" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp">
        <Button android:id="@+id/but_exit" android:background="@mipmap/back_b" android:layout_width="45dp" android:layout_height="45dp"/>
        <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
        <Button android:textColor="#9ff000" android:id="@+id/button_cancel" android:background="#80000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Cancel"/>
        <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
        <Button android:textColor="#9ff000" android:id="@+id/button_delete" android:background="#80000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Delete_All"/>
        <Space android:layout_width="20dp" android:layout_height="wrap_content"/>
        <TextView android:textColor="#ff00" android:gravity="right" android:id="@+id/Title_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brow_photos_videos"/>
    </LinearLayout>
    <com.joyhonest.wifi_check.WaitView android:id="@+id/WaitView" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_centerHorizontal="false"/>
    <RelativeLayout android:id="@+id/DeleteAert" android:background="#80000000" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/round_back_select_jh" android:visibility="visible" android:layout_width="320dp" android:layout_height="150dp" android:layout_centerInParent="true">
            <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/Sure_you_want_to_delete" android:layout_centerHorizontal="true"/>
            <Button android:id="@+id/alart_cancel" android:background="@drawable/round_back_jh" android:layout_width="80dp" android:layout_height="40dp" android:text="@string/Cancel" android:layout_alignTop="@+id/alart_ok" android:layout_marginStart="32dp" android:layout_alignParentStart="true"/>
            <Button android:id="@+id/alart_ok" android:background="@drawable/round_back_jh" android:layout_width="80dp" android:layout_height="40dp" android:layout_marginBottom="19dp" android:text="@string/OK" android:layout_alignParentBottom="true" android:layout_marginEnd="32dp" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
